err/django-states.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_states'...
Compiling './lib/python3.5/site-packages/django_states/machine.py'...
***   File "./lib/python3.5/site-packages/django_states/machine.py", line 247
    except TransitionException, e:
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_states/management'...
Listing './lib/python3.5/site-packages/django_states/management/commands'...
Compiling './lib/python3.5/site-packages/django_states/model_methods.py'...
***   File "./lib/python3.5/site-packages/django_states/model_methods.py", line 185
    except TransitionException, e:
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_states/templatetags'...
Compiling './lib/python3.5/site-packages/django_states/views.py'...
***   File "./lib/python3.5/site-packages/django_states/views.py", line 50
    except PermissionDenied, e:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_states-1.6.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/test_proj'...
Listing './share'...
Listing './share/python-wheels'...
